# drafty

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  refresh.sh
.devcontainer/: devcontainer.json
.github/workflows/: pr_checks.yaml  weekly_refresh.yaml
drafty/: app_draft.py  app_main.py  app_selection.py  app_standings.py  app_transfers.py  config.yaml  data_ingest.py  data_pipeline.py  data_preprocess.py  data_teams  data_transform.py  draft.py  drafty.db  main.py  mathy.py
drafty/data/: bench_pts.csv  blunders_1.csv  blunders_10.csv  blunders_11.csv  blunders_12.csv  blunders_13.csv  blunders_14.csv  blunders_15.csv  blunders_16.csv  blunders_17.csv  blunders_18.csv  blunders_19.csv  blunders_2.csv  blunders_20.csv  blunders_21.csv  blunders_22.csv  blunders_23.csv  blunders_24.csv  blunders_25.csv  blunders_26.csv  blunders_27.csv  blunders_28.csv  blunders_29.csv  blunders_3.csv  blunders_30.csv  blunders_31.csv  blunders_32.csv  blunders_33.csv  blunders_34.csv  blunders_35.csv  blunders_36.csv  blunders_37.csv  blunders_38.csv  blunders_4.csv  blunders_5.csv  blunders_6.csv  blunders_7.csv  blunders_8.csv  blunders_9.csv  bootstrap-dynamic.json  (+19 more)
drafty/page/: draft.py
drafty/sql/: calc_bench_points.sql  calc_blunders.sql  calc_cumm_points.sql  calc_points_bracket.sql  calc_running_standings.sql  calc_total_bench_pts.sql  concat_team_points.sql
public/data/: bench_pts.csv  blunders_1.csv  blunders_10.csv  blunders_11.csv  blunders_12.csv  blunders_15.csv  blunders_19.csv  blunders_21.csv  blunders_23.csv  (+20 more)
(+286 files in other folders)
