[tool.poetry]
name = "drafty"
version = "0.1.0"
description = "dashboard for fpl draft mini league"
authors = ["Danial Azam <dazam92@gmail.com>"]
readme = "README.md"
packages = [
    { include = "drafty" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
duckdb = "^1.0.0"
streamlit = "^1.37.0"
streamlit-extras = "^0.4.3"
pandas = "^2.2.2"
watchdog = "^4.0.1"
sympy = "^1.13.1"
sqlalchemy = "^2.0.32"
loguru = "^0.7.2"
plotly = "^5.24.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
